# rag_tour

./: .env  .gitignore  View.html  main.py  pyproject.toml  tour.csv  tour_embeddings.npy
chatbot/: check_models.py  evaluate_rag.py  evaluation_results.csv  manage.py  requirements.txt  test_dataset.json
chatbot/chatbot/: settings.py  urls.py
chatbot/chattour/: apps.py  services.py  urls.py  views.py
chatbot/utils/: mongo.py
frontend/: .env
frontend/ChatFE/: package-lock.json  package.json
frontend/ChatFE/src/: App.jsx
frontend/ChatFE/src/Pages/: Chatbot.jsx
